# repolens

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE-MIT  README.md  RELEASE.md  action.yml  build.rs  deny.toml  docker-compose.yml  repolens-report.md
.claude/commands/: update-doc.md
.github/: CODEOWNERS
.github/scripts/: create_issues.sh
.github/workflows/: ci.yml  release.yml  sync-wiki.yml
benches/: parse_benchmark.rs  pdf_benchmark.rs  rules_benchmark.rs  scanner_benchmark.rs
docs/: architecture.md  automatic-changelog.md  best-practices.md  ci-cd-integration.md  configuration.md  contributing.md  custom-rules.md  development.md  docker.md  installation.md  presets.md  rule-categories.md  usage.md
docs/installation/: completions.md
docs/output/: csv.md  junit.md  ndjson.md  pdf.md
docs/superpowers/plans/: 2026-05-13-plan-a-scope-cuts.md  2026-05-13-plan-b-practice-alignment.md  2026-05-13-plan-c-documentation-rewrite.md
docs/superpowers/specs/: 2026-05-13-repolens-recentering-design.md
examples/github-action/: basic.yml  pr-comment.yml  sarif-upload.yml
integrations/azure-devops/: azure-pipelines.yml
integrations/circleci/: config.yml
integrations/github-actions/: repolens.yml
integrations/gitlab-ci/: .gitlab-ci.yml
integrations/jenkins/: Jenkinsfile
packaging/aur/: .SRCINFO.template  PKGBUILD
packaging/debian/: control  copyright
packaging/homebrew/: repolens.rb
packaging/scoop/: repolens.json
schemas/: README.md  audit-report.schema.json  finding.schema.json  junit-10.xsd
src/: main.rs
src/actions/: planner.rs
src/cli/: mod.rs
src/cli/commands/: apply.rs  compare.rs  completions.rs  init.rs  mod.rs  plan.rs  report.rs
src/cli/output/: csv.rs  html.rs  json.rs  junit.rs  markdown.rs  mod.rs  ndjson.rs  pdf.rs  sarif.rs
src/compare/: mod.rs
src/config/: branding.rs  loader.rs  mod.rs
src/hooks/: mod.rs
src/providers/: github.rs
src/rules/: constants.rs  engine.rs
src/rules/categories/: custom.rs  dependencies.rs  docker.rs  docs.rs  git.rs  licenses.rs  quality.rs  secrets.rs  workflows.rs
src/rules/patterns/: secrets.rs
src/scanner/: filesystem.rs
src/utils/: mod.rs  prerequisites.rs
tests/: e2e_test.rs  integration.rs  output_csv_test.rs  output_junit_test.rs  output_ndjson_test.rs  pdf_branding_test.rs  utils_test.rs
tests/integration/: completions.rs
tests/integration/snapshots/: output_junit__mixed_fixture.snap
tests/snapshots/: output_junit_test__mixed_fixture.snap
wiki/: Bonnes-pratiques.md  Changelog-Automatique.md  Contribution.md  Guide-d-utilisation.md  Home.md  Installation.md
